<resources>
    <string name="app_name">Synchrotron</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_favs">Favoris</string>
    <string name="menu_lines">Lignes et arrêts</string>
    <string name="menu_ticket">Acheter un ticket</string>

    <string name="ticket_text_1">L\'achat de ticket est possible par SMS !</string>
    <string name="ticket_text_2">Le ticket est valable pour l\'heure suivant son achat.</string>
    <string name="ticket_prix">(1.30€)</string>
    <string name="ticket_confirm">Confirmer l\'achat</string>
    <string name="ticket_confirm_text">Êtes vous sûrs de vouloir acheter un ticket ?</string>

    <string name="arret_proche">Arrêt le plus proche</string>

    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="line_logo">Line logo</string>
    <string name="base_arret_name">PLAGE</string>
    <string name="direction">Direction :</string>
    <string name="base_hour">14h30</string>
    <string name="see_all_lines">Voir toutes les lignes</string>
    <string name="base_direction">Direction : PLAGE</string>
    <string name="no_bus">Aucun départ proche</string>
    <string name="charging">Chargement des données...</string>
    <string name="favs">Favoris</string>
    <string name="base_next_bus">Prochain bus à 10:30</string>
    <string name="tiret"> - </string>
</resources>