<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ticket.TicketFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="0dp"
            android:layout_height="200dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ticket_text_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            android:text="@string/ticket_text_2"
            android:textColor="@color/lightblue"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_id"
            android:layout_height="80dp"
            android:layout_width="match_parent"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/menu_ticket" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ticket_prix"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>